--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@ main {
   font-weight: 400;
 }
 .weather-app-details strong {
-  color: #ffc0cb;
+  color: #ef5f9a;
 }
 .weather-app-temperature-container {
   display: flex;
@@ -78,8 +78,10 @@ main {
   margin-bottom: 10px;
 }
 .weather-forecast-icon {
-  font-size: 38px;
-  text-align: center;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-forecast {
   display: flex;
@@ -88,7 +90,7 @@ main {
 }
 .weather-forecast-temperatures {
   text-align: center;
-  color: #ffc0cb;
+  color: #ef5f9a;
   margin-top: 10px;
   display: flex;
   justify-content: center;
